--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="G:/Servers/Minecraft/Latest/spigot-1.12.2.jar" sourcepath="G:/buildtools/Spigot/Spigot-Server/src/main/java">
+	<classpathentry kind="lib" path="/Users/mac/Desktop/Plugins/Spigot/Spigot 1.12.2.jar" sourcepath="G:/buildtools/Spigot/Spigot-Server/src/main/java">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Brian/Server/doc/"/>
 		</attributes>
